# ZeroVault

./: .cursorrules  .gitignore  README.md  nohup.out  package-lock.json  package.json
backend/: .env  Dockerfile  README.md  env.example  package.json  tsconfig.json
backend/src/: index.ts  seal.ts  sui.ts  walrus.ts
backend/src/api/: datasets.ts  nautilus.ts  proof.ts  purchase.ts  upload.ts  walrus.ts  (+1 more)
circuits/: data_authenticity.circom  data_authenticity.r1cs  package.json  quality_proof.circom
circuits/data_authenticity_cpp/: Makefile  data_authenticity.cpp
circuits/inputs/: data_authenticity.json  quality_proof.json
circuits/quality_proof_cpp/: Makefile
circuits/scripts/: all-in-one.sh  prove.sh  setup.sh
contracts/: .coverage_map.mvcov  .trace  Move.toml
contracts/sources/: access_policies.move  dataset.move  marketplace.move  zk_marketplace_integration.move  zk_verifier.move
contracts/tests/: marketplace_tests.move  zk_marketplace_integration_tests.move  zk_verifier_tests.move
docs/: DEPLOYMENT.md  GETTING_STARTED.md
frontend/: .env.local  .eslintrc.json  next.config.js  package.json  tailwind.config.ts  tsconfig.json
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  images-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  trace
nautilus/: .env  Cargo.toml  Dockerfile
nautilus/src/: main.rs  quality_validator.rs  tee_attestation.rs  walrus_client.rs
scripts/: deploy-with-zk.sh  test-real-zk.sh
sui-vktool/: Cargo.toml
sui-vktool/src/: main.rs
(+518 files in other folders)
