[package]
name = "zkdatavault-nautilus"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-nitro-enclaves-nsm-api = "0.4"
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
bytes = "1.6"
http-body-util = "0.1"
ring = "0.17"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ed25519-dalek = { version = "1", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
strip = true
